[project]
name = "cf-dns-edit"
version = "0.1.0"
description = "TUI to edit DNS records for cloudflare domains"
readme = "README.md"
authors = [
    { name = "ShyMike", email = "122023566+ImShyMike@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cloudflare>=4.2.0",
    "colorama>=0.4.6",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
cf-dns-edit = "cf_dns_edit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
